--- a/public/index.html
+++ b/public/index.html
@@ -7,6 +7,14 @@
 	<meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=0">
 </head>
 <body>
-    <div id="root"></div>
+	<div id="root"></div>
+	<script async src="https://www.googletagmanager.com/gtag/js?id=UA-158942494-2"></script>
+	<script>
+	window.dataLayer = window.dataLayer || [];
+	function gtag(){dataLayer.push(arguments);}
+	gtag('js', new Date());
+
+	gtag('config', 'UA-158942494-2');
+	</script>
 </body>
 </html>
