--- a/public/index.html
+++ b/public/index.html
@@ -5,6 +5,22 @@
 	<title>idena-pocket</title>
 	<link href="https://fonts.googleapis.com/css?family=Inter&display=swap" rel="stylesheet">
 	<meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=0">
+	
+	<link rel="shortcut icon" href="favicon.ico"/>
+	<link rel="apple-touch-icon" sizes="180x180" href="apple-touch-icon.png">
+	<link rel="icon" type="image/png" sizes="32x32" href="favicon-32x32.png">
+	<link rel="icon" type="image/png" sizes="16x16" href="favicon-16x16.png">
+	<link rel="manifest" href="site.webmanifest">
+	<link rel="mask-icon" href="safari-pinned-tab.svg" color="#333333">
+	<meta name="msapplication-TileColor" content="#ffffff">
+	<meta name="theme-color" content="#ffffff">
+	<meta property="og:image:width" content="1200"/>
+	<meta property="og:image:height" content="628"/>
+	<meta property="og:title" content="pocket-idena: idena web wallet"/>
+	<meta property="og:description" content="Join the mining of the first human-centric cryptocurrency"/>
+	<meta property="og:url" content="https://pocket.idena.dev"/>
+	<meta property="og:image" content="https://pocket.idena.dev/Content_Image.png"/>
+	<meta property="og:type" content="website">
 </head>
 <body>
 	<div id="root"></div>
