--- a/public/index.html
+++ b/public/index.html
@@ -16,8 +16,8 @@
 	<meta name="theme-color" content="#ffffff">
 	<meta property="og:image:width" content="1200"/>
 	<meta property="og:image:height" content="628"/>
-	<meta property="og:title" content="pocket-idena: idena web wallet"/>
-	<meta property="og:description" content="Join the mining of the first human-centric cryptocurrency"/>
+	<meta property="og:title" content="pocket-idena"/>
+	<meta property="og:description" content="​Idena-pocket is a web wallet mobile ready that doesn't require an active full node."/>
 	<meta property="og:url" content="https://pocket.idena.dev"/>
 	<meta property="og:image" content="https://pocket.idena.dev/Content_Image.png"/>
 	<meta property="og:type" content="website">
