--- a/public/index.html
+++ b/public/index.html
@@ -1,37 +1,71 @@
 <!DOCTYPE html>
 <html>
-<head>
-    <meta charset="UTF-8">
-	<title>idena-pocket</title>
-	<link href="https://fonts.googleapis.com/css?family=Inter&display=swap" rel="stylesheet">
-	<link href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" rel="stylesheet">
-	<meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=0">
-	
-	<link rel="shortcut icon" href="favicon.ico"/>
-	<link rel="apple-touch-icon" sizes="180x180" href="apple-touch-icon.png">
-	<link rel="icon" type="image/png" sizes="32x32" href="favicon-32x32.png">
-	<link rel="icon" type="image/png" sizes="16x16" href="favicon-16x16.png">
-	<link rel="manifest" href="site.webmanifest">
-	<link rel="mask-icon" href="safari-pinned-tab.svg" color="#333333">
-	<meta name="msapplication-TileColor" content="#ffffff">
-	<meta name="theme-color" content="#ffffff">
-	<meta property="og:image:width" content="1200"/>
-	<meta property="og:image:height" content="628"/>
-	<meta property="og:title" content="pocket-idena"/>
-	<meta property="og:description" content="​Idena-pocket is a web wallet mobile ready that doesn't require an active full node."/>
-	<meta property="og:url" content="https://pocket.idena.dev"/>
-	<meta property="og:image" content="https://pocket.idena.dev/Content_Image.png"/>
-	<meta property="og:type" content="website">
-</head>
-<body>
-	<div id="root"></div>
-	<script async src="https://www.googletagmanager.com/gtag/js?id=UA-158942494-2"></script>
-	<script>
-	window.dataLayer = window.dataLayer || [];
-	function gtag(){dataLayer.push(arguments);}
-	gtag('js', new Date());
+	<head>
+		<meta charset="UTF-8" />
+		<title>idena-pocket</title>
+		<link
+			href="https://fonts.googleapis.com/css?family=Inter&display=swap"
+			rel="stylesheet"
+		/>
+		<link
+			href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css"
+			rel="stylesheet"
+		/>
+		<meta
+			name="viewport"
+			content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=0"
+		/>
 
-	gtag('config', 'UA-158942494-2');
-	</script>
-</body>
+		<link rel="shortcut icon" href="favicon.ico" />
+		<link
+			rel="apple-touch-icon"
+			sizes="180x180"
+			href="apple-touch-icon.png"
+		/>
+		<link
+			rel="icon"
+			type="image/png"
+			sizes="32x32"
+			href="favicon-32x32.png"
+		/>
+		<link
+			rel="icon"
+			type="image/png"
+			sizes="16x16"
+			href="favicon-16x16.png"
+		/>
+		<link rel="manifest" href="site.webmanifest" />
+		<link rel="mask-icon" href="safari-pinned-tab.svg" color="#333333" />
+		<meta name="msapplication-TileColor" content="#ffffff" />
+		<meta name="theme-color" content="#ffffff" />
+		<meta property="og:image:width" content="1200" />
+		<meta property="og:image:height" content="628" />
+		<meta property="og:title" content="pocket-idena" />
+		<meta
+			property="og:description"
+			content="​Idena-pocket is a web wallet mobile ready that doesn't require an active full node."
+		/>
+		<meta property="og:url" content="https://pocket.idena.dev" />
+		<meta
+			property="og:image"
+			content="https://pocket.idena.dev/Content_Image.png"
+		/>
+		<meta property="og:type" content="website" />
+	</head>
+	<body>
+		<div id="root"></div>
+		<script
+			async
+			src="https://www.googletagmanager.com/gtag/js?id=UA-158942494-2"
+		></script>
+		<script>
+			window.dataLayer = window.dataLayer || []
+			function gtag () {
+				dataLayer.push(arguments)
+			}
+			gtag('js', new Date())
+
+			gtag('config', 'UA-158942494-2')
+		</script>
+	</body>
 </html>
